Added some more answer text

--- a/english/faq.html
+++ b/english/faq.html
@@ -75,7 +75,7 @@
                     <article class="faq">
                         <h4><span>My Facebook Page is my 'website', and I use Instagram for publicity. Why should I
                                 bother with anything else?</span></h4>
-                        <p>Well, a Facebook page is NOT a website. While Instagram is great for publicising products and creating
+                        <p>Well, a Facebook page is NOT a website and while Instagram is great for publicising products and creating
                             content that shares your know-how with the world, here's some data to think about.
                             Only 55% of the world’s population is on social media. The US and the UK both have just over
                             65% active social media users. Facebook has a user base of just under 3 billion, and there
@@ -87,7 +87,7 @@
                             only use these two platforms to reach fans and clients, you are missing out on a massive
                             number of potential customers. So it’s really a no-brainer to have a website. It’s somewhere
                             that clients and potential clients who don't use social media can always find information
-                            about your services, merchandise or gigs, irrespective of the latest social media trends.
+                            about your services, merchandise or gigs, irrespective of the latest social media trends. A website is also the best place to build your email list.
                         </p>
                     </article>
                     <!-- <article class="faq">
