Added faq link to all headers. Added sticky nav to services and faq pages. Made nik payton header active to return to home page

--- a/services/index.html
+++ b/services/index.html
@@ -33,7 +33,7 @@
 
   <header>
     <div class="content-wrapper">
-      <h3>nik payton | web developer</h3>
+      <h3><a href="../english/index.html">nik payton | web developer</a></h3>
       <div class="header-divider"></div>
       <nav id="navbar">
         <ul class="navigation">
@@ -42,6 +42,8 @@
           <li><a href="../english/index.html#about">about</a></li>
           <li><a href="#contact">contact</a></li>
           <li><a href="../services/index.html">services</a></li>
+          <li><a href="../english/faq.html">faq</a></li>
+
         </ul>
       </nav>
     </div>
@@ -115,9 +117,9 @@
     <!-- </div> -->
   </footer>
 
-  <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="/js/plugins.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="../js/plugins.js"></script>
+  <script src="../js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
