--- a/english/index.html
+++ b/english/index.html
@@ -33,7 +33,7 @@
 
   <header>
     <div class="content-wrapper">
-      <h3>nik payton | web developer</h3>
+      <h3><a href="../english/index.html">nik payton | web developer</a></h3>
       <div class="header-divider"></div>
       <nav id="navbar">
         <ul class="navigation">
@@ -42,6 +42,7 @@
           <li><a href="#about">about</a></li>
           <li><a href="#contact">contact</a></li>
           <li><a href="../services/index.html">services</a></li>
+          <li><a href="../english/faq.html">faq</a></li>
 
         </ul>
       </nav>
