--- a/services/index.html
+++ b/services/index.html
@@ -42,7 +42,7 @@
           <li><a href="../english/index.html#about">about</a></li>
           <li><a href="#contact">contact</a></li>
           <li><a href="../services/index.html">services</a></li>
-          <li><a href="../english/faq.html">faq</a></li>
+          <!-- <li><a href="../english/faq.html">faq</a></li> -->
 
         </ul>
       </nav>
