Added nav class of navbar, and changed id to nav-top in index, css and js

--- a/english/index.html
+++ b/english/index.html
@@ -34,8 +34,8 @@
   <header>
     <div class="content-wrapper">
       <h3><a href="../english/index.html">nik payton | web developer</a></h3>
-      <nav id="navbar">
-        <ul class="navigation">
+      <nav class="navbar" id="nav-top">
+        <ul class="nav-menu">
           <li><a href="#projects">projects</a></li>
           <li><a href="#skills">skills</a></li>
           <li><a href="#about">about</a></li>
