Added li classes for nav-item and nav-link. Updated paths in services.html

--- a/english/index.html
+++ b/english/index.html
@@ -36,12 +36,18 @@
       <h3><a href="../english/index.html">nik payton | web developer</a></h3>
       <nav class="navbar" id="nav-top">
         <ul class="nav-menu">
-          <li><a href="#projects">projects</a></li>
-          <li><a href="#skills">skills</a></li>
-          <li><a href="#about">about</a></li>
-          <li><a href="#contact">contact</a></li>
-          <li><a href="../services/index.html">services</a></li>
-          <!-- <li><a href="../english/faq.html">faq</a></li> -->
+          <li class="nav-item">
+            <a href="#projects" class="nav-link">projects</a></li>
+          <li class="nav-item">
+            <a href="#skills" class="nav-link">skills</a></li>
+          <li class="nav-item">
+            <a href="#about" class="nav-link">about</a></li>
+          <li class="nav-item">
+            <a href="#contact class="nav-link"">contact</a></li>
+          <li class="nav-item">
+            <a href="../services/index.html">services</a></li>
+          <!-- <li class="nav-item">
+            <a href="../english/faq.html" class="nav-link">faq</a></li> -->
         </ul>
       </nav>
     </div>
