--- a/services/index.html
+++ b/services/index.html
@@ -35,7 +35,7 @@
     <div class="content-wrapper">
       <h3><a href="../english/index.html">nik payton | web developer</a></h3>
       <div class="header-divider"></div>
-      <nav id="navbar">
+      <nav class="navbar" id="nav-top">
         <ul class="navigation">
           <li><a href="../english/index.html#projects">projects</a></li>
           <li><a href="../english/index.html#skills">skills</a></li>
