Changed header nav etc to classes

--- a/english/index.html
+++ b/english/index.html
@@ -43,12 +43,17 @@
           <li class="nav-item">
             <a href="#about" class="nav-link">about</a></li>
           <li class="nav-item">
-            <a href="#contact class="nav-link"">contact</a></li>
+            <a href="#contact" class="nav-link">contact</a></li>
           <li class="nav-item">
-            <a href="../services/index.html">services</a></li>
+            <a href="../services/index.html" class="nav-link">services</a></li>
           <!-- <li class="nav-item">
             <a href="../english/faq.html" class="nav-link">faq</a></li> -->
         </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </nav>
     </div>
   </header>
