Added hover to header logo nik payton. Updated services to reflect new classes. Added a transtion to hover in css

--- a/english/index.html
+++ b/english/index.html
@@ -33,7 +33,7 @@
 
   <header>
     <div class="content-wrapper">
-      <h3><a href="../english/index.html">nik payton | web developer</a></h3>
+      <h3><a href="../english/index.html" class="nav-link">nik payton | web developer</a></h3>
       <nav class="navbar" id="nav-top">
         <ul class="nav-menu">
           <li class="nav-item">
