--- a/services/index.html
+++ b/services/index.html
@@ -33,18 +33,27 @@
 
   <header>
     <div class="content-wrapper">
-      <h3><a href="../english/index.html">nik payton | web developer</a></h3>
-      <div class="header-divider"></div>
+      <h3><a href="../english/index.html" class="nav-link">nik payton | web developer</a></h3>
       <nav class="navbar" id="nav-top">
-        <ul class="navigation">
-          <li><a href="../english/index.html#projects">projects</a></li>
-          <li><a href="../english/index.html#skills">skills</a></li>
-          <li><a href="../english/index.html#about">about</a></li>
-          <li><a href="#contact">contact</a></li>
-          <li><a href="../services/index.html">services</a></li>
-          <!-- <li><a href="../english/faq.html">faq</a></li> -->
-
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#projects" class="nav-link">projects</a></li>
+          <li class="nav-item">
+            <a href="#skills" class="nav-link">skills</a></li>
+          <li class="nav-item">
+            <a href="#about" class="nav-link">about</a></li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link">contact</a></li>
+          <li class="nav-item">
+            <a href="../services/index.html" class="nav-link">services</a></li>
+          <!-- <li class="nav-item">
+            <a href="../english/faq.html" class="nav-link">faq</a></li> -->
         </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </nav>
     </div>
   </header>
