--- a/english/index.html
+++ b/english/index.html
@@ -34,6 +34,7 @@
   <header>
     <div class="content-wrapper">
       <h3><a href="../english/index.html" class="nav-link">nik payton | web developer</a></h3>
+      <div class="header-divider"></div>
       <nav class="navbar" id="nav-top">
         <ul class="nav-menu">
           <li class="nav-item">
