Updated navbar links to connect to #sections on main page, and added the FAQ page. Css: Reduced header bottom to 100px, changed content-wrapper width under tablet styles, reduced header h3 font size and added width 60%. Updated header nav ul etc to new navbav and nav-item classes. Under desktop styles, reduced font-size to 2.2px and changed flex-flow to row.

--- a/english/faq.html
+++ b/english/faq.html
@@ -33,18 +33,28 @@
 
     <header>
         <div class="content-wrapper">
-            <h3><a href="../english/index.html">nik payton | web developer</a></h3>
+            <h3><a href="../english/index.html" class="nav-link">nik payton | web developer</a></h3>
             <div class="header-divider"></div>
-            <nav id="navbar">
-                <ul class="navigation">
-                    <li><a href="../english/index.html#projects">projects</a></li>
-                    <li><a href="../english/index.html#skills">skills</a></li>
-                    <li><a href="../english/index.html#about">about</a></li>
-                    <li><a href="#contact">contact</a></li>
-                    <li><a href="../services/index.html">services</a></li>
-                    <li><a href="../english/faq.html">faq</a></li>
-
+            <nav class="navbar" id="nav-top">
+                <ul class="nav-menu">
+                    <li class="nav-item">
+                        <a href="../english/index.html#projects" class="nav-link">projects</a></li>
+                    <li class="nav-item">
+                        <a href="../english/index.html#skills" class="nav-link">skills</a></li>
+                    <li class="nav-item">
+                        <a href="../english/index.html#about" class="nav-link">about</a></li>
+                    <li class="nav-item">
+                        <a href="../english/index.html#contact" class="nav-link">contact</a></li>
+                    <li class="nav-item">
+                        <a href="../services/index.html" class="nav-link">services</a></li>
+                    <li class="nav-item">
+                <a href="../english/faq.html" class="nav-link">faq</a></li>
                 </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </nav>
         </div>
     </header>
@@ -59,7 +69,8 @@
                         <p>A responsive site is one that adapts to whatever device is being used. It changes appearence
                             depending on screen size and orientation. As of 2022, over 60% of internet traffic comes
                             from mobile devices and that number will only increase. If your website is not
-                            mobile-friendly (in other words, it doesn't look just as good, and respond just as well, on different mobile devices as it does on a
+                            mobile-friendly (in other words, it doesn't look just as good, and respond just as well, on
+                            different mobile devices as it does on a
                             laptop) then most users won't stick around for any longer than a few seconds. Also, Google's
                             algorithms will punish non responsive sites, meaning you or your company will not rank
                             highly on a Google search.</p>
@@ -70,14 +81,16 @@
                         <p>First of all, if not losing clients is your metric, it's a pretty shitty business plan. As an
                             artist or a small business, you should obviously be always trying to attract new fans and
                             clients, preferably without losing existing ones. If your website is old, poorly designed,
-                            or non responsive (see above) then keeping those potential customers for more than 30 seconds is going
+                            or non responsive (see above) then keeping those potential customers for more than 30
+                            seconds is going
                             to be hard. Optimising your website can help attract new clients, keep them engaged and
                             eventually convert them into paying customers.</p>
                     </article>
                     <article class="faq">
                         <h4><span>My Facebook Page is my 'website', and I use Instagram for publicity. Why should I
                                 bother with anything else?</span></h4>
-                        <p>Well, a Facebook page is NOT a website and while Instagram is great for publicising products and creating
+                        <p>Well, a Facebook page is NOT a website and while Instagram is great for publicising products
+                            and creating
                             content that shares your know-how with the world, here's some data to think about.
                             Only 55% of the world’s population is on social media. The US and the UK both have just over
                             65% active social media users. Facebook has a user base of just under 3 billion, and there
@@ -89,7 +102,8 @@
                             only use these two platforms to reach fans and clients, you are missing out on a massive
                             number of potential customers. So it’s really a no-brainer to have a website. It’s somewhere
                             that clients and potential clients who don't use social media can always find information
-                            about your services, merchandise or gigs, irrespective of the latest social media trends. A website is also the best place to build your email list.
+                            about your services, merchandise or gigs, irrespective of the latest social media trends. A
+                            website is also the best place to build your email list.
                         </p>
                     </article>
                     <!-- <article class="faq">
