--- a/services/index.html
+++ b/services/index.html
@@ -37,17 +37,17 @@
       <nav class="navbar" id="nav-top">
         <ul class="nav-menu">
           <li class="nav-item">
-            <a href="#projects" class="nav-link">projects</a></li>
+            <a href="../english/index.html#projects" class="nav-link">projects</a></li>
           <li class="nav-item">
-            <a href="#skills" class="nav-link">skills</a></li>
+            <a href="../english/index.html#skills" class="nav-link">skills</a></li>
+         <li class="nav-item">
+            <a href="../english/index.html#about" class="nav-link">about</a></li>
           <li class="nav-item">
-            <a href="#about" class="nav-link">about</a></li>
-          <li class="nav-item">
-            <a href="#contact" class="nav-link">contact</a></li>
-          <li class="nav-item">
+            <a href="../english/index.html#contact" class="nav-link">contact</a></li>
+         <li class="nav-item">
             <a href="../services/index.html" class="nav-link">services</a></li>
-          <!-- <li class="nav-item">
-            <a href="../english/faq.html" class="nav-link">faq</a></li> -->
+          <li class="nav-item">
+            <a href="../english/faq.html" class="nav-link">faq</a></li>
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
