--- a/english/index.html
+++ b/english/index.html
@@ -47,8 +47,8 @@
             <a href="#contact" class="nav-link">contact</a></li>
           <li class="nav-item">
             <a href="../services/index.html" class="nav-link">services</a></li>
-          <!-- <li class="nav-item">
-            <a href="../english/faq.html" class="nav-link">faq</a></li> -->
+          <li class="nav-item">
+            <a href="../english/faq.html" class="nav-link">faq</a></li>
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
