Added new header to portuguese index

--- a/portuguese/index.html
+++ b/portuguese/index.html
@@ -33,16 +33,28 @@
 
   <header>
     <div class="content-wrapper">
-      <h3>nik payton | web developer</h3>
+      <h3><a href="../portuguese/index.html" class="nav-link">nik payton | web developer</a></h3>
       <div class="header-divider"></div>
-      <nav id="navbar">
-        <ul class="navigation">
-          <li><a href="#projects">projetos</a></li>
-          <li><a href="#skills">skills</a></li>
-          <li><a href="#about">sobre mim</a></li>
-          <li><a href="#contact">contato</a></li>
-          <li><a href="../services/index.html">serviços</a></li>
+      <nav class="navbar" id="nav-top">
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="../portuguese/index.html#projects" class="nav-link">projetos</a></li>
+          <li class="nav-item">
+            <a href="../portuguese/index.html#skills" class="nav-link">skills</a></li>
+          <li class="nav-item">
+            <a href="../portuguese/index.html#about" class="nav-link">sobre mim</a></li>
+          <li class="nav-item">
+            <a href="../portuguese/index.html#contact" class="nav-link">contacto</a></li>
+          <li class="nav-item">
+            <a href="../services/index.html" class="nav-link">serviços</a></li>
+          <li class="nav-item">
+            <a href="../english/faq.html" class="nav-link">faq</a></li>
         </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </nav>
     </div>
   </header>
