Updated links on portuguese index to go to prot pages. Still having trouble connecting the servicos page for some reason

--- a/portuguese/faq.html
+++ b/portuguese/faq.html
@@ -33,22 +33,22 @@
 
     <header>
         <div class="content-wrapper">
-            <h3><a href="../english/index.html" class="nav-link">nik payton | web developer</a></h3>
+            <h3><a href="../portuguese/index.html" class="nav-link">nik payton | web developer</a></h3>
             <div class="header-divider"></div>
             <nav class="navbar" id="nav-top">
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="../english/index.html#projects" class="nav-link">projects</a></li>
+                        <a href="../portuguese/index.html#projetos" class="nav-link">projetos</a></li>
                     <li class="nav-item">
-                        <a href="../english/index.html#skills" class="nav-link">skills</a></li>
+                        <a href="../portuguese/index.html#skills" class="nav-link">skills</a></li>
                     <li class="nav-item">
-                        <a href="../english/index.html#about" class="nav-link">about</a></li>
+                        <a href="../portuguese/index.html#about" class="nav-link">sobre mim</a></li>
                     <li class="nav-item">
-                        <a href="../english/index.html#contact" class="nav-link">contact</a></li>
+                        <a href="../portuguese/index.html#contact" class="nav-link">contacto</a></li>
                     <li class="nav-item">
-                        <a href="../services/index.html" class="nav-link">services</a></li>
+                        <a href="../portuguese/servicos.html" class="nav-link">serviços</a></li>
                     <li class="nav-item">
-                <a href="../english/faq.html" class="nav-link">faq</a></li>
+                <a href="../portuguese/faq.html" class="nav-link">faq</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -65,45 +65,19 @@
             <div class="services">
                 <div class="content-wrapper">
                     <article class="faq">
-                        <h4><span>What's a responsive website, and why should I have one?</span></h4>
-                        <p>A responsive site is one that adapts to whatever device is being used. It changes appearence
-                            depending on screen size and orientation. As of 2022, over 60% of internet traffic comes
-                            from mobile devices and that number will only increase. If your website is not
-                            mobile-friendly (in other words, it doesn't look just as good, and respond just as well, on
-                            different mobile devices as it does on a
-                            laptop) then most users won't stick around for any longer than a few seconds. Also, Google's
-                            algorithms will punish non responsive sites, meaning you or your company will not rank
-                            highly on a Google search.</p>
+                        <h4><span>O que é um site responsivo e por que devo ter um?</span></h4>
+                        <p>Um site responsivo é aquele que se adapta a qualquer dispositivo que esteja sendo utilizado. Ele muda de aparência dependendo do tamanho e orientação da tela. A partir de 2022, mais de 60% do tráfego da Internet vem de dispositivos móveis e esse número só aumentará. Se o seu site não for compatível com dispositivos móveis (em outras palavras, ele não parece tão bom e responde tão bem em diferentes dispositivos móveis quanto em um laptop), a maioria dos usuários não permanecerá por mais tempo do que alguns segundos. Além disso, os algoritmos do Google punirão sites não responsivos, o que significa que você ou sua empresa não terão uma classificação alta em uma pesquisa do Google.</p>
                     </article>
                     <article class="faq">
-                        <h4><span>I haven't been losing any clients/fans, so why should I worry about optimising my
-                                website?</span></h4>
-                        <p>First of all, if not losing clients is your metric, it's a pretty shitty business plan. As an
-                            artist or a small business, you should obviously be always trying to attract new fans and
-                            clients, preferably without losing existing ones. If your website is old, poorly designed,
-                            or non responsive (see above) then keeping those potential customers for more than 30
-                            seconds is going
-                            to be hard. Optimising your website can help attract new clients, keep them engaged and
-                            eventually convert them into paying customers.</p>
+                        <h4><span>Não tenho perdido nenhum cliente/fã, então por que devo me preocupar em otimizar meu
+                            website?</span></h4>
+                        <p>Em primeiro lugar, se não perder clientes é sua métrica, é um plano de negócios muito ruim. Como artista ou pequeno empresário, obviamente você deve estar sempre tentando atrair novos fãs e clientes, de preferência sem perder os já existentes. Se o seu site for antigo, mal projetado ou não responsivo (veja acima), será difícil manter esses clientes em potencial por mais de 30 segundos. Otimizar seu site pode ajudar a atrair novos clientes, mantê-los envolvidos e, eventualmente, convertê-los em clientes pagantes.</p>
                     </article>
                     <article class="faq">
-                        <h4><span>My Facebook Page is my 'website', and I use Instagram for publicity. Why should I
-                                bother with anything else?</span></h4>
-                        <p>Well, a Facebook page is NOT a website and while Instagram is great for publicising products
-                            and creating
-                            content that shares your know-how with the world, here's some data to think about.
-                            Only 55% of the world’s population is on social media. The US and the UK both have just over
-                            65% active social media users. Facebook has a user base of just under 3 billion, and there
-                            are close to 1.5 billion active Instagram users. Those are impressive numbers, and obviously
-                            the reach of social media is huge especially for small businesses, but let’s flip those
-                            numbers.
-                            Somewhere close to 30% of the US and UK populations don’t use social media. Almost 1 billion
-                            people don’t use Facebook and 42% of internet users don’t use Instagram. Therefore, if you
-                            only use these two platforms to reach fans and clients, you are missing out on a massive
-                            number of potential customers. So it’s really a no-brainer to have a website. It’s somewhere
-                            that clients and potential clients who don't use social media can always find information
-                            about your services, merchandise or gigs, irrespective of the latest social media trends. A
-                            website is also the best place to build your email list.
+                        <h4><span>Minha página do Facebook é meu 'site' e eu uso o Instagram para publicidade. Por que eu deveria me preocupar com qualquer outra coisa?</span></h4>
+                        <p>Bem, uma página do Facebook NÃO é um site e, embora o Instagram seja ótimo para divulgar produtos e criar conteúdo que compartilhe seu 'know-how' com o mundo, aqui estão alguns dados para pensar.
+                            Apenas 55% da população mundial está nas redes sociais. Os EUA e o Reino Unido têm pouco mais de 65% de usuários ativos de mídia social. O Facebook tem uma base de usuários de pouco menos de 3 bilhões e há cerca de 1,5 bilhão de usuários ativos no Instagram. Esses são números impressionantes e, obviamente, o alcance das mídias sociais é enorme, especialmente para pequenas empresas, mas vamos inverter esses números.
+                            Cerca de 30% das populações dos EUA e do Reino Unido não usam mídias sociais. Quase 1 bilhão de pessoas não usam o Facebook e 42% dos internautas não usam o Instagram. Portanto, se você usar apenas essas duas plataformas para alcançar fãs e clientes, estará perdendo um grande número de clientes em potencial. Portanto, é realmente um acéfalo ter um site. É um lugar onde clientes e potenciais clientes que não usam mídias sociais sempre podem encontrar informações sobre seus serviços, mercadorias ou shows, independentemente das últimas tendências de mídia social. Um site também é o melhor lugar para construir sua lista de e-mail.
                         </p>
                     </article>
                     <!-- <article class="faq">
@@ -119,42 +93,39 @@
             </div>
         </section>
     </main>
-
     <footer class="footer" id="contact">
         <div class="content-wrapper">
-            <!-- <div class="footer-content"> -->
-            <h3>... Let's Talk!</h3>
-            <div class="contact-wrapper">
-                <div class="contact-info">
-                    <h4 class="contact-title">Interested in working together? Send me an email with some info about your
-                        project, and I'll get back to you as soon as I can (normally within 24 hours).</h4>
-                    <address>
-                        <a href="mailto:nik@nikpayton.tech">nik [@] nikpayton.tech</a>
-                    </address>
-                </div>
-
-                <div class="contact-info social">
-                    <h4 class="contact-title">Or, if you just want to chat, follow me on LinkedIn and tell me what
-                        you're up to.</h4>
-                    <div class="follow-section">
-                        <ul class="social-icons">
-                            <li>
-                                <a href="https://www.linkedin.com/in/nikpayton/" target="_blank"><i
-                                        class="fab fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/niko1402" target="_blank"><i class="fab fa-github"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+          <!-- <div class="footer-content"> -->
+          <h3>... Vamos conversar!</h3>
+          <div class="contact-wrapper">
+            <div class="contact-info">
+              <h4 class="contact-title">Interessado em trabalhar juntos? Envie-me um e-mail com algumas informações sobre seu projeto e entrarei em contato com você o mais rápido possível (normalmente em 24 horas).</h4>
+              <address>
+                <a href="mailto:nik@nikpayton.tech">nik [@] nikpayton.tech</a>
+              </address>
             </div>
+    
+            <div class="contact-info social">
+              <h4 class="contact-title">Ou, se você quiser apenas conversar, siga-me no LinkedIn e me diga o que você está fazendo.</h4>
+              <div class="follow-section">
+                <ul class="social-icons">
+                  <li>
+                    <a href="https://www.linkedin.com/in/nikpayton/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/niko1402" target="_blank"><i class="fab fa-github"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div> <!-- Footer Content ends here -->
         <div class="copyright">
-            <p> Copyright 2022 | Nik Payton</p>
+          <p> Copyright 2022 | Nik Payton</p>
         </div>
         <!-- </div> -->
-    </footer>
+      </footer>
+    
 
     <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="../js/plugins.js"></script>
