--- a/english/services.html
+++ b/english/services.html
@@ -45,7 +45,7 @@
           <li class="nav-item">
             <a href="../english/index.html#contact" class="nav-link">contact</a></li>
          <li class="nav-item">
-            <a href="../services/index.html" class="nav-link">services</a></li>
+            <a href="../english/services.html" class="nav-link">services</a></li>
           <li class="nav-item">
             <a href="../english/faq.html" class="nav-link">faq</a></li>
         </ul>
