--- a/portuguese/index.html
+++ b/portuguese/index.html
@@ -46,9 +46,9 @@
           <li class="nav-item">
             <a href="../portuguese/index.html#contact" class="nav-link">contacto</a></li>
           <li class="nav-item">
-            <a href="../services/index.html" class="nav-link">serviços</a></li>
+            <a href="../portuguese/servicos.html" class="nav-link">serviços</a></li>
           <li class="nav-item">
-            <a href="../english/faq.html" class="nav-link">faq</a></li>
+            <a href="../portuguese/faq.html" class="nav-link">faq</a></li>
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
