Translated text into to portuguese, corrected footer which was in English still

--- a/portuguese/servicos.html
+++ b/portuguese/servicos.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Nik Payton - Services</title>
+  <title>Nik Payton - Serviços</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,60 +33,61 @@
 
   <header>
     <div class="content-wrapper">
-      <h3><a href="../english/index.html" class="nav-link">nik payton | web developer</a></h3>
-      <nav class="navbar" id="nav-top">
-        <ul class="nav-menu">
-          <li class="nav-item">
-            <a href="../english/index.html#projects" class="nav-link">projects</a></li>
-          <li class="nav-item">
-            <a href="../english/index.html#skills" class="nav-link">skills</a></li>
-         <li class="nav-item">
-            <a href="../english/index.html#about" class="nav-link">about</a></li>
-          <li class="nav-item">
-            <a href="../english/index.html#contact" class="nav-link">contact</a></li>
-         <li class="nav-item">
-            <a href="../services/index.html" class="nav-link">services</a></li>
-          <li class="nav-item">
-            <a href="../english/faq.html" class="nav-link">faq</a></li>
-        </ul>
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-      </nav>
+        <h3><a href="../portuguese/index.html" class="nav-link">nik payton | web developer</a></h3>
+        <div class="header-divider"></div>
+        <nav class="navbar" id="nav-top">
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="../portuguese/index.html#projetos" class="nav-link">projetos</a></li>
+                <li class="nav-item">
+                    <a href="../portuguese/index.html#skills" class="nav-link">skills</a></li>
+                <li class="nav-item">
+                    <a href="../portuguese/index.html#about" class="nav-link">sobre mim</a></li>
+                <li class="nav-item">
+                    <a href="../portuguese/index.html#contact" class="nav-link">contacto</a></li>
+                <li class="nav-item">
+                    <a href="../portuguese/servicos.html" class="nav-link">serviços</a></li>
+                <li class="nav-item">
+            <a href="../portuguese/faq.html" class="nav-link">faq</a></li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
     </div>
-  </header>
+</header>
 
   <main>
     <section class="service-page">
-      <h1><span>Services</span></h1>
+      <h1><span>Serviços</span></h1>
         <div class="services">
           <div class="content-wrapper">
             <article class="services-info">
               <li class="services-list">
               <i class="design-icon"></i>
               </li>
-              <p>Code a pixel-perfect website from an existing design, including interactivity.</p> 
+              <p>Codifique um site com pixels perfeitos a partir de um design existente, incluindo interatividade.</p> 
               <hr>
-              <p>Upgrade an existing website into a fully responsive, mobile-friendly site.</p>
+              <p>Atualize um site existente para um site totalmente responsivo e compatível com dispositivos móveis.</p>
             </article>
             <article class="services-info">
               <li class="services-list">
               <i class="fa-brands fa-wordpress"></i>
               </li>
-              <p>WordPress theme personalisation - adapt a WP template for your needs, install relevant plugins and widgets.</p>
+              <p>Personalização do tema WordPress - adapte um modelo WP para suas necessidades, instale plug-ins e widgets relevantes.</p>
               <hr>
-              <p>WordPress maintenance – backups, plugin updates, tweaks etc.</p>
+              <p>Manutenção do WordPress – backups, atualizações de plugins, ajustes etc.</p>
             </article>
             <article class="services-info">
-              <h3><span>Musicians, artists and small businesses</span></h3>
+              <h3><span>Músicos, artistas e pequenos negócios</span></h3>
               <li class="services-list">
               <i class="fa-solid fa-icons"></i>
               </li>
-              <p>Online business analysis – effectiveness of website, social media etc., suggest areas to focus on</p>
+              <p>Análise de negócios on-line – eficácia do site, mídia social, etc., sugira áreas para focar</p>
               <hr>
-              <p>Website optimisation - attract more fans/clients, build email lists etc.</p>
+              <p>Otimização do site - atraia mais fãs/clientes, desenvolver listas de e-mail, etc.</p>
             </article>
           </div>
         </div>
@@ -96,17 +97,17 @@
   <footer class="footer" id="contact">
     <div class="content-wrapper">
       <!-- <div class="footer-content"> -->
-      <h3>... Let's Talk!</h3>
+      <h3>... Vamos conversar!</h3>
       <div class="contact-wrapper">
         <div class="contact-info">
-          <h4 class="contact-title">Interested in working together? Send me an email with some info about your project, and I'll get back to you as soon as I can (normally within 24 hours).</h4>
+          <h4 class="contact-title">Interessado em trabalhar juntos? Envie-me um e-mail com algumas informações sobre seu projeto e entrarei em contato com você o mais rápido possível (normalmente em 24 horas).</h4>
           <address>
             <a href="mailto:nik@nikpayton.tech">nik [@] nikpayton.tech</a>
           </address>
         </div>
 
         <div class="contact-info social">
-          <h4 class="contact-title">Or, if you just want to chat, follow me on LinkedIn and tell me what you're up to.</h4>
+          <h4 class="contact-title">Ou, se você quiser apenas conversar, siga-me no LinkedIn e me diga o que você está fazendo.</h4>
           <div class="follow-section">
             <ul class="social-icons">
               <li>
