--- a/portuguese/index.html
+++ b/portuguese/index.html
@@ -42,9 +42,9 @@
           <li class="nav-item">
             <a href="../portuguese/index.html#skills" class="nav-link">skills</a></li>
           <li class="nav-item">
-            <a href="../portuguese/index.html#about" class="nav-link">sobre mim</a></li>
+            <a href="../portuguese/index.html#about" class="nav-link">mim</a></li>
           <li class="nav-item">
-            <a href="../portuguese/index.html#contact" class="nav-link">contacto</a></li>
+            <a href="../portuguese/index.html#contact" class="nav-link">contato</a></li>
           <li class="nav-item">
             <a href="../portuguese/servicos.html" class="nav-link">serviços</a></li>
           <li class="nav-item">
