corrected link to English services page in the navbar. Removed sobre in navbar in the other pages (forgot to do in last commit).

--- a/english/index.html
+++ b/english/index.html
@@ -46,7 +46,7 @@
           <li class="nav-item">
             <a href="#contact" class="nav-link">contact</a></li>
           <li class="nav-item">
-            <a href="../services/index.html" class="nav-link">services</a></li>
+            <a href="../english/services.html" class="nav-link">services</a></li>
           <li class="nav-item">
             <a href="../english/faq.html" class="nav-link">faq</a></li>
         </ul>
