--- a/portuguese/faq.html
+++ b/portuguese/faq.html
@@ -42,7 +42,7 @@
                     <li class="nav-item">
                         <a href="../portuguese/index.html#skills" class="nav-link">skills</a></li>
                     <li class="nav-item">
-                        <a href="../portuguese/index.html#about" class="nav-link">sobre mim</a></li>
+                        <a href="../portuguese/index.html#about" class="nav-link">mim</a></li>
                     <li class="nav-item">
                         <a href="../portuguese/index.html#contact" class="nav-link">contacto</a></li>
                     <li class="nav-item">
