Changed faq text to correct Google algorithm comment

--- a/english/faq.html
+++ b/english/faq.html
@@ -71,9 +71,7 @@
                             from mobile devices and that number will only increase. If your website is not
                             mobile-friendly (in other words, it doesn't look just as good, and respond just as well, on
                             different mobile devices as it does on a
-                            laptop) then most users won't stick around for any longer than a few seconds. Also, Google's
-                            algorithms will punish non responsive sites, meaning you or your company will not rank
-                            highly on a Google search.</p>
+                            laptop) then most users won't stick around for any longer than a few seconds. Also, Google's algorithms tend to favour mobile-friendly websites, meaning you or your company will not rank as highly on a Google search as a company with a fully responsive site. And nobody wants that!.</p>
                     </article>
                     <article class="faq">
                         <h4><span>I haven't been losing any clients/fans, so why should I worry about optimising my
