Reverted css back to earlier commit, before the font-size, faq classes etc. Changed FAQ and Services titles to h2

--- a/english/faq.html
+++ b/english/faq.html
@@ -61,22 +61,22 @@
 
     <main>
         <section class="service-page">
-            <h1><span>FAQ's</span></h1>
+            <h2><span>FAQ's</span></h2>
             <div class="services">
                 <div class="content-wrapper">
-                    <article class="faq">
+                    <article>
                         <h4><span>What's a responsive website, and why should I have one?</span></h4>
-                        <p>A responsive site is one that adapts to whatever device is being used. It changes appearence
+                        <p class="faq-answers">A responsive site is one that adapts to whatever device is being used. It changes appearence
                             depending on screen size and orientation. As of 2022, over 60% of internet traffic comes
                             from mobile devices and that number will only increase. If your website is not
                             mobile-friendly (in other words, it doesn't look just as good, and respond just as well, on
                             different mobile devices as it does on a
                             laptop) then most users won't stick around for any longer than a few seconds. Also, Google's algorithms tend to favour mobile-friendly websites, meaning you or your company will not rank as highly on a Google search as a company with a fully responsive site. And nobody wants that!.</p>
                     </article>
-                    <article class="faq">
+                    <article>
                         <h4><span>I haven't been losing any clients/fans, so why should I worry about optimising my
                                 website?</span></h4>
-                        <p>First of all, if not losing clients is your metric, it's a pretty shitty business plan. As an
+                        <p class="faq-answers">First of all, if not losing clients is your metric, it's a pretty shitty business plan. As an
                             artist or a small business, you should obviously be always trying to attract new fans and
                             clients, preferably without losing existing ones. If your website is old, poorly designed,
                             or non responsive (see above) then keeping those potential customers for more than 30
@@ -84,10 +84,10 @@
                             to be hard. Optimising your website can help attract new clients, keep them engaged and
                             eventually convert them into paying customers.</p>
                     </article>
-                    <article class="faq">
+                    <article>
                         <h4><span>My Facebook Page is my 'website', and I use Instagram for publicity. Why should I
                                 bother with anything else?</span></h4>
-                        <p>Well, a Facebook page is NOT a website and while Instagram is great for publicising products
+                        <p class="faq-answers">Well, a Facebook page is NOT a website and while Instagram is great for publicising products
                             and creating
                             content that shares your know-how with the world, here's some data to think about.
                             Only 55% of the world’s population is on social media. The US and the UK both have just over
